<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@android:style/Theme.NoTitleBar"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="0dp"
        android:paddingTop="0dp">


        <!--><Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#280A3C"
            android:foreground="@drawable/linxsetadigital"></Toolbar><!-->


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="#280A3C"
            android:backgroundTint="#280A3C"
            android:src="@drawable/banner" />

        <TextView
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100px"
            android:fontFamily="@font/dosis"
            android:gravity="center"
            android:text="@string/upper_text"
            android:textColor="@color/texto"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dosis"
            android:gravity="center"
            android:text="@string/bottom_text"
            android:textColor="@color/texto" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50px"
            android:layout_marginTop="100px"
            android:layout_marginRight="50px"
            android:orientation="horizontal"
            android:padding="4dp"
            android:paddingLeft="500px"
            android:paddingRight="500px">

            <ImageView
                android:id="@+id/user_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:src="@drawable/person" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_enterUserName"
                app:boxBackgroundColor="@color/white"
                android:padding="4dp">


                <AutoCompleteTextView
                    android:id="@+id/edtUserName"
                    android:layout_width="327dp"
                    android:layout_height="65dp"
                    android:layout_margin="2dp"
                    android:background="@null"
                    android:fontFamily="@font/dosis"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:shadowColor="@color/white"
                    android:singleLine="true"
                    android:textColor="@color/texto"
                    android:textColorHighlight="@color/white" />


            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50px"
            android:layout_marginTop="16dp"
            android:layout_marginRight="50px"
            android:layout_marginBottom="150px"
            android:orientation="horizontal"
            android:padding="4dp"
            android:paddingLeft="500px"
            android:paddingRight="500px">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:src="@drawable/password" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:padding="4dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="@color/white"
                    android:fontFamily="@font/dosis"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/texto" />


            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="335dp"
            android:layout_height="78dp"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:angle="90"
            android:background="@drawable/round_shape_button"
            android:fontFamily="@font/dosis_extrabold"
            android:gravity="center"
            android:onClick="onclick"
            android:paddingStart="34dp"
            android:paddingEnd="34dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>


</RelativeLayout>
